Fix IG-1913 [Nuclio] Triggers not visually aligned (#198)
Also:
Impl IG-1915 [Nuclio] Change URL of "trigger" to "triggers"

--- a/src/nuclio/projects/project/functions/version/version-triggers/version-triggers.less
+++ b/src/nuclio/projects/project/functions/version/version-triggers/version-triggers.less
@@ -24,12 +24,12 @@
 
     .title-field-row .name-field, .item-row .item-name, .header-name {
         margin-right: 16px;
-        width: 289px;
+        width: 15%;
     }
 
     .title-field-row .class-field, .item-row .item-class, .header-class {
         margin-right: 16px;
-        width: 184px;
+        width: 10%;
     }
 
     .create-trigger-button.common-table-row {
